# IntelligentVoiceAssistent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
Requirements/: 001-Basisanforderungen.md  002-Durchgehende-Konversation.md  003-Audio-Signale.md  004-Terminal-UI.md  005-Fehlerbehandlung-und-Logging.md  006-Fehler-Sprachrueckmeldung.md  007-Kommando-Abbruch.md  008-Konversations-Reset.md  009-Hilfe-und-Befehlsdokumentation.md  010-Selbst-Neustart.md  011-Selbstbewusstsein-Quelltext-Zugriff.md  012-Konversations-Persistenz-ueber-Neustart.md  013-Cross-Platform-Abstraktion.md  014-Verbesserte-Terminal-Darstellung.md  015-Matrix-Chat-Integration.md  015-Texteingabe-Modus.md  016-Matrix-Audio-Transkription.md  017-Transkript-Filterung.md  018-Asynchrone-Nachrichtenverarbeitung.md
ai-docs/: claude-code-subprocess.md  openai-tts.md  (+5 more)
sprachassistent/: config.example.yaml  config.py  config.yaml  exceptions.py  main.py  pyproject.toml
sprachassistent/ai/: __init__.py  claude_code.py
sprachassistent/ai/prompts/: system.md
sprachassistent/audio/: __init__.py  microphone.py  player.py  recorder.py  wake_word.py
sprachassistent/chat/: matrix_client.py  message.py
sprachassistent/input/: __init__.py  keyboard.py  text_input.py
sprachassistent/platform/: __init__.py  _linux_restart.py  factory.py  interfaces.py
sprachassistent/platform/windows/: __init__.py  microphone.py  player.py  restart.py
sprachassistent/stt/: __init__.py  whisper_api.py
sprachassistent/tts/: __init__.py  openai_tts.py
sprachassistent/utils/: __init__.py  logging.py  terminal_ui.py
(+28 files in other folders)
