[project]
name = "sprachassistent"
version = "0.1.0"
description = "Lokaler Sprachassistent 'Computer' - Wake-Word aktiviert, KI-gestuetzt, mit Dateizugriff"
requires-python = ">=3.12"
dependencies = [
    "pyaudio>=0.2.14",
    "openai>=1.0",
    "numpy>=1.26",
    "rich>=13.0",
    "pyyaml>=6.0",
    "onnxruntime>=1.17",
    "silero-vad-lite>=0.2",
    # openwakeword deps (installed via --no-deps to skip tflite-runtime on Python 3.13)
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "tqdm>=4.0",
    "requests>=2.28",
]

[project.scripts]
sprachassistent = "sprachassistent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
