[project]
name = "sprachassistent"
version = "0.1.0"
description = "Lokaler Sprachassistent 'Computer' - Wake-Word aktiviert, KI-gestuetzt, mit Dateizugriff"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pvporcupine",
    "pyaudio",
    "openai",
    "anthropic",
    "sounddevice",
    "numpy",
    "rich",
    "pyyaml",
]

[project.scripts]
sprachassistent = "sprachassistent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
